# blinky-pico2

./: Cargo.toml  README.md  rp235x_riscv.x
.cargo/: config.toml
