[package]
name = "blinky-pico2"
version = "0.2.1"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
critical-section = {version = "1.2.0"}
defmt = "0.3"
defmt-rtt = "0.4.2"
dht-sensor = "0.2.1"
embedded-alloc = "0.5.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.7", features = ["unproven"]}
fugit = "0.3.9"
futures = {version = "0.3.32", default-features = false, features = ["async-await"]}
hd44780-driver = "0.4.0"
heapless = "0.8.0"
nb = "1.1"
panic-halt = "0.2.0"
pio = "0.2.1"
pio-proc = "0.2.2"
#rp235x-hal = { git = "https://github.com/rp-rs/rp-hal.git", package = "rp235x-hal", version = "0.4", features = ["binary-info", "critical-section-impl", "rt", "defmt"]}
rp235x-hal = { version = "0.4", features = ["binary-info", "critical-section-impl", "rt", "defmt"]}
usb-device = "0.3.2"
usbd-serial = "0.2.2"
static_cell = "2.1.1"

[target.'cfg( target_arch = "arm" )'.dependencies]
embassy-executor = {version = "0.5", features = ["arch-cortex-m", "executor-thread"]}

[target.'cfg( target_arch = "riscv32" )'.dependencies]
embassy-executor = {version = "0.5", features = ["arch-riscv32", "executor-thread"]}
